# libservice

service/: CMakeLists.txt  buildtimestamp.cpp.in  buildtimestamp.hpp  buildtimestamp.hpp.in  cmdline.cpp  cmdline.hpp  config.hpp  ctrlclient.cpp  ctrlclient.hpp  ctrlhandshake.cpp  ctrlhandshake.hpp  gconfig.hpp  githash.cpp.in  githash.hpp  githash.hpp.in  netctrlclient.cpp  netctrlclient.hpp  persona.hpp  pidfile.cpp  pidfile.hpp  pipenotifier.cpp  pipenotifier.hpp  program.cpp  program.hpp  runable.hpp  runninguntilsignalled.cpp  runninguntilsignalled.hpp  service.cpp  service.hpp  verbosity.hpp
service/customer/: program.none.cpp  program.oss.cpp  program.seznam.cz.cpp
service/detail/: ctrlclient.cpp  ctrlclient.hpp  signalhandler.cpp  signalhandler.hpp
service/tools/: CMakeLists.txt  ctrlclient.cpp  netctrlclient.cpp
